Added mouseover event
Unsure how to otherwise delete the input of a user while reflecting that on the filtered images

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <input type="search" name="search" class="search" placeholder="Search" onkeyup="searchFilter();">
+        <input type="search" name="search" class="search" placeholder="Search" onkeyup="searchFilter();" onmouseover="searchFilter();">
       </header>
       <main>
         <div id="gallery">
